--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
@@ -57,7 +57,7 @@
             </TableView>
             <SplitPane dividerPositions="0.5">
                <items>
-                  <TableView fx:id="tblViewTTPhanCongMoiCNPCCN" maxWidth="-Infinity" minWidth="-Infinity">
+                  <TableView fx:id="tblViewTTPhanCongMoiCNPCCN" maxWidth="-Infinity" minWidth="-Infinity" onMouseClicked="#skChonRowtbtViewTTPhanCong">
                     <columns>
                       <TableColumn fx:id="colMaPhanCongMoiCNPCCN" prefWidth="133.599969494343" text="Mã phân công " />
                         <TableColumn fx:id="colHovaTenMoiCNPCCN" prefWidth="175.0" text="Họ và tên" />
@@ -65,7 +65,7 @@
                         <TableColumn fx:id="colSoLuongLamMoiCNPCCN" prefWidth="250.0" text="Số lượng làm" />
                     </columns>
                   </TableView>
-                  <TableView fx:id="tblViewTTSoNguoiDaPC" onMouseClicked="#skChonRowtblViewTTSoLuongNguoi">
+                  <TableView fx:id="tblViewTTSoNguoiDaPC">
                     <columns>
                       <TableColumn fx:id="colTotblViewTTSoNguoiDaPC" prefWidth="75.0" text="Tổ " />
                       <TableColumn fx:id="colSoNguoitblviewSoNguoiDaPC" prefWidth="200.0" text="Số lượng người đã phân công" />
@@ -93,7 +93,7 @@
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
                         <Label text="Ngày phân công" />
-                        <DatePicker fx:id="datepickNgayPhanCongPCCN" />
+                        <DatePicker fx:id="datepickNgayPhanCongPCCN" disable="true" editable="false" />
                      </children>
                      <padding>
                         <Insets left="5.0" />
@@ -288,7 +288,7 @@
             <HBox alignment="CENTER" spacing="50.0">
                <children>
                   <Button fx:id="btnPhanCongPCCN" mnemonicParsing="false" onAction="#skbtnPhanCongCN" text="Phân công" />
-                  <Button fx:id="btnSuaPCCN" mnemonicParsing="false" text="Sửa" />
+                  <Button fx:id="btnSuaPCCN" mnemonicParsing="false" onAction="#skbtnSuaPCCN" text="Sửa" />
                </children>
                <padding>
                   <Insets top="20.0" />
